--- a/mainpage.css
+++ b/mainpage.css
@@ -98,6 +98,7 @@ body{
     height: 31px;
     margin-left: 0.7%;
     border: 1px solid white;
+    font-family: 'Lato', sans-serif;
 }
 
 .menu_opt:hover{
@@ -105,6 +106,7 @@ body{
     color: rgb(10,10,35);
     border: 1px solid white;
     cursor: pointer;
+    font-family: 'Lato', sans-serif;
 }
 
 .sign_in{
@@ -114,6 +116,7 @@ body{
     height: 31px;
     width: 80px;
     margin-left: 0.7%;
+    font-family: 'Lato', sans-serif;
 }
 
 .sign_in:hover{
@@ -121,6 +124,7 @@ body{
     background-image: none;
     background-color: #fec748;
     border: 1px solid rgb(254,172,50);
+    font-family: 'Lato', sans-serif;
 }
 
 .div_intro{
@@ -216,6 +220,7 @@ body{
     background-color: #3b3b4f;
     font-size: 40px;
     font-weight: 500;
+    font-family: 'Lato', sans-serif;
     color: rgb(208,208,213);
     text-align: center;
     padding-top: 38px;
@@ -227,7 +232,7 @@ body{
 
 #svg-asseen{
     fill: rgb(208,208,213);
-    height: 72px;
+    height: 10px;
 }
 
 #review{
@@ -235,6 +240,7 @@ body{
     font-weight: 500;
     text-align: center;
     font-size: 45px;
+    font-family: 'Lato', sans-serif;
     padding-top: 38px;
     margin-bottom: 40px;
 }
@@ -256,6 +262,7 @@ body{
     margin-top: 5.5%;
     color: white;
     text-align: center;
+    font-family: 'Lato', sans-serif;
 }
 
 #review-1-title{
@@ -267,7 +274,7 @@ body{
 
 #review-1-sub_title{
     font-size: 24px;
-    font-weight: 300;
+    font-weight: 400;
     color: rgb(208,208,213);
 }
 
@@ -288,11 +295,13 @@ body{
     margin-left: 33%;
     margin-top: 2.5%;
     font-size: 27px;
-    font-weight: 300;
+    font-weight: 400;
+    font-family: 'Lato', sans-serif;
 }
 
 .get_started_2:hover{
     background-color: #fec748;
     background-image: none;
     cursor: pointer;
+    font-family: 'Lato', sans-serif;
 }
