--- a/mainpage.css
+++ b/mainpage.css
@@ -379,6 +379,14 @@ textarea:focus, input:focus {
     color: #3b3b4f;
 }
 
+.certi_arrow{
+    fill: rgb(245, 246, 247);
+}
+
+.certi_arrow:hover{
+    fill: #3b3b4f;
+}
+
 .certi_sub_part{
     display: flex;
     justify-content: space-between;
@@ -412,4 +420,185 @@ textarea:focus, input:focus {
 
 .map-icon:hover{
     fill: #3b3b4f;
+}
+
+.get_started_3{
+    width: 500px;
+    height: 50px;
+    background-image: linear-gradient(to bottom, #fec748, rgb(254,172,50));
+    border-width: 3px;
+    border-color: rgb(254,172,50);
+    margin-left: 33%;
+    margin-top: 2.5%;
+    font-size: 27px;
+    font-weight: 400;
+    font-family: 'Lato', sans-serif;
+}
+
+.get_started_3:hover{
+    background-color: #fec748;
+    background-image: none;
+    cursor: pointer;
+}
+
+.qns{
+    color: white;
+    font-family: sans-serif;
+    font-size: 0.5cm;
+}
+
+.qna{
+    margin-top: 2cm;
+    margin-left: 17%;
+    margin-right: 17%;
+}
+
+.qna h3{
+    font-size: 1.2cm;
+    font-family: sans-serif;
+    color: rgb(255, 255, 255);
+}
+
+.get_started_4{
+    width: 500px;
+    height: 50px;
+    background-image: linear-gradient(to bottom, #fec748, rgb(254,172,50));
+    border-width: 3px;
+    border-color: rgb(254,172,50);
+    margin-left: 20%;
+    margin-top: 2.5%;
+    margin-bottom: 5%;
+    font-size: 27px;
+    font-weight: 400;
+    font-family: 'Lato', sans-serif;
+}
+
+.get_started_4:hover{
+    background-color: #fec748;
+    background-image: none;
+    cursor: pointer;
+}
+
+.happy {
+    font-weight: 1000;
+    font-size: 0.5cm;
+    font-family: 'Consolas';
+    color: #ffffff;
+}
+
+.footer{
+    display:flex;
+    width: 100%;
+    height: 18.5cm;
+    background-color: #2a2a40
+}
+
+.f1{
+    height: fit-content;
+    width: 43%;
+    font-family: sans-serif;
+    color: rgba(255, 255, 255, 0.751);
+    font-size: 16px;
+    line-height: 1.8;
+    padding-top: 45px; 
+    padding-left: 90px;
+}
+
+.f1 u{
+    font-size: 18px;
+}
+
+.f2 {
+    font-family: sans-serif;
+    color: rgba(255, 255, 255, 0.751);
+    font-size: 16px;
+    line-height: 1.8;
+    height: fit-content;
+    width: 43%;
+    padding: 0%;
+    margin-left: 1cm;
+}
+
+.trending-guides-articles {
+    font-family: sans-serif;
+    color: rgba(255, 255, 255, 0.751);
+    font-size: 16px;
+    line-height: 1.8;
+    grid-column-gap: 3rem;
+    grid-row-gap: .5rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(11em,1fr));
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    white-space: pre;
+}
+
+a{
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.817);
+}
+
+.f2 h2{
+    margin-top: 1.2cm;
+    text-align: center;
+    color: #ffff;
+    font-size: 0.45cm;
+}
+
+.store{
+    height: 2cm;
+    width: 8cm;
+}
+
+.store ul{
+    height: fit-content;
+    width: fit-content;
+    list-style: none;
+}
+
+.store{
+    height: 2cm;
+    width: 15cm;
+    position: relative;
+}
+
+.imga{
+    margin-top: -1.5cm;
+    margin-left: 2.8cm;
+    overflow: hidden;
+    position: absolute;
+    height: 4.5cm;
+    width: 6cm;
+}
+
+.imgb{
+    margin-top: -1.5cm;
+    margin-left: 7.8cm;
+    position: absolute;
+    height: 4.5cm;
+    width: 6cm;
+}
+
+.last pre{
+    font-family: sans-serif;
+    position: absolute;
+    font-size: 17.5px;
+    width: 100%;
+    margin-top: 16.7cm;
+}
+
+.last{
+    color: #ffffffc0;
+    font-family: sans-serif;
+    position: absolute;
+}
+
+.line{
+    position: absolute;
+    margin-top: 16cm;
+    width: 85%;
+    height: 1px;
+    margin-left: 7.5%;
+    background-color:#363653 ;
 }
