--- a/mainpage.css
+++ b/mainpage.css
@@ -377,14 +377,22 @@ textarea:focus, input:focus {
     background-color: rgb(245, 246, 247);
     fill: #3b3b4f;
     color: #3b3b4f;
+
+    .certi_arrow{
+    fill: #3b3b4f;
+    }
+
+    .logo_text{
+    color: #3b3b4f;
+    }
+
+    .map-icon{
+    fill: #3b3b4f;
+    }
 }
 
 .certi_arrow{
     fill: rgb(245, 246, 247);
-}
-
-.certi_arrow:hover{
-    fill: #3b3b4f;
 }
 
 .certi_sub_part{
@@ -406,20 +414,12 @@ textarea:focus, input:focus {
     color: rgb(245, 246, 247);
 }
 
-.logo_text:hover{
-    color: #3b3b4f;
-}
-
 .map-icon{
     width: 50px;
     max-height: 55px;
     fill: rgb(245, 246, 247);
     margin-left: 5px;
     margin-right: 5px;
-}
-
-.map-icon:hover{
-    fill: #3b3b4f;
 }
 
 .get_started_3{
